--- a/src/vanilla/index.html
+++ b/src/vanilla/index.html
@@ -23,7 +23,7 @@
     
       
       woopra.track("start_game", {
-        game: "game1_liff" 
+        game: "game2_liff" 
       });
     </script>
   </head>
@@ -37,8 +37,7 @@
         >
       </h1>
       <div class="home__badges">
-        <span class="home__badges__badge badge--primary"> LIFF Starter </span>
-        <span class="home__badges__badge badge--secondary"> vanilla </span>
+        <span class="home__badges__badge badge--primary"> Hello Woopra !</span>
         <span class="home__badges__badge badge--tertiary"> 0.1.0 </span>
         <a
           href="https://github.com/line/line-liff-v2-starter"
